@@ -76,8 +76,7 @@ namespace libtorrent
 		// this is the constructor where the we are the active part.
 		// The peer_connection should handshake and verify that the
 		// other end has the correct id
-		bt_peer_connection(peer_connection_args const& pack
-			, peer_id const& pid);
+		bt_peer_connection(peer_connection_args const& pack);
 
 		virtual void start() TORRENT_OVERRIDE;
 
